// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import from dynamic template string path 1`] = `
"
import(\`./\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./\${page}\\",
  load: () => Promise.all([import(
  /* webpackChunkName: '[request]' */
  \`./\${page}\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./\${page}\`),
  resolve: () => require.resolveWeak(\`./\${page}\`),
  chunkName: () => \`\${page}\`
});
"
`;

exports[`import from dynamic template string path relative to deep sub folder (two tags) 1`] = `
"
import(\`./components/\${page}/nested/\${another}Component\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./components/\${page}/nested/\${another}Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components/[request]' */
  \`./components/\${page}/nested/\${another}Component\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./components/\${page}/nested/\${another}Component\`),
  resolve: () => require.resolveWeak(\`./components/\${page}/nested/\${another}Component\`),
  chunkName: () => \`components/\${page}/nested/\${another}Component\`
});
"
`;

exports[`import from dynamic template string path relative to deep sub folder 1`] = `
"
import(\`./components/\${page}/nested/Component\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./components/\${page}/nested/Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components/[request]' */
  \`./components/\${page}/nested/Component\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./components/\${page}/nested/Component\`),
  resolve: () => require.resolveWeak(\`./components/\${page}/nested/Component\`),
  chunkName: () => \`components/\${page}/nested/Component\`
});
"
`;

exports[`import from dynamic template string path relative to grand parent folder 1`] = `
"
import(\`../../components/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../components/\${page}\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components/[request]' */
  \`../../components/\${page}\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../../components/\${page}\`),
  resolve: () => require.resolveWeak(\`../../components/\${page}\`),
  chunkName: () => \`components/\${page}\`
});
"
`;

exports[`import from dynamic template string path relative to sub folder 1`] = `
"
import(\`./components/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./components/\${page}\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components/[request]' */
  \`./components/\${page}\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./components/\${page}\`),
  resolve: () => require.resolveWeak(\`./components/\${page}\`),
  chunkName: () => \`components/\${page}\`
});
"
`;

exports[`import from static path 1`] = `
"
import('./Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import from static path relative to grand parent folder 1`] = `
"
import('../../Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  '../../Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, '../../Component'),
  resolve: () => require.resolveWeak('../../Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import from static path relative to parent sub folder 1`] = `
"
import(\`../components/Component\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../components/Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components/Component' */
  \`../components/Component\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../components/Component\`),
  resolve: () => require.resolveWeak(\`../components/Component\`),
  chunkName: () => \`components/Component\`
});
"
`;

exports[`import from static path returned by function assigned to object property 1`] = `
"
const obj = { component: () => import('../components/Component') };
() => obj.component()

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const obj = {
  component: () => (0, _universalImport2.default)({
    id: \\"../components/Component\\",
    load: () => Promise.all([import(
    /* webpackChunkName: 'components/Component' */
    '../components/Component')]).then(proms => proms[0]),
    path: () => _path2.default.join(__dirname, '../components/Component'),
    resolve: () => require.resolveWeak('../components/Component'),
    chunkName: () => \\"components/Component\\"
  })
};

() => obj.component();
"
`;

exports[`import from static path with file extension 1`] = `
"
import('./Component.js')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  './Component.js')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component.js'),
  resolve: () => require.resolveWeak('./Component.js'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import from static template string path 1`] = `
"
import(\`./Component\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  \`./Component\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./Component\`),
  resolve: () => require.resolveWeak(\`./Component\`),
  chunkName: () => \`Component\`
});
"
`;

exports[`import from static template string path relative to grand parent folder 1`] = `
"
import(\`../../Component\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  \`../../Component\`)]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../../Component\`),
  resolve: () => require.resolveWeak(\`../../Component\`),
  chunkName: () => \`Component\`
});
"
`;

exports[`import returned by async function that should return a thennable without calling .then 1`] = `
"
async ({ page }) => await import(\`../components/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

async ({
  page
}) => await (0, _universalImport2.default)(() => Promise.all([import(
/* webpackChunkName: 'components/[request]' */
\`../components/\${page}\`)]).then(proms => proms[0]), false);
"
`;

exports[`import with babelServer: true 1`] = `
"
import('./Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackChunkName + strips out unknown things 1`] = `
"
import(
  /* webpackFakeProperty1: 'Lazy' */
  /* webpackChunkName: 'Bar'*/
  /* webpackFakeProperty3123: /foobar/ */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackPrefetch 1`] = `
"
import(
  /* webpackChunkName: 'Bar'*/
  /* webpackPrefetch: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackPrefetch: true */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackPreload 1`] = `
"
import(
  /* webpackChunkName: 'Bar'*/
  /* webpackPreload: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackPreload: true */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackmode + webpackInclude + webpackExclude + webpackIgnore 1`] = `
"
import(
  /* webpackChunkName: 'Bar'*/
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  /* webpackExclude: /(?!*test.js)$/ */
  /* webpackIgnore: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackIgnore: true */

  /* webpackExclude: /(?!*test.js)$/ */

  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackmode + webpackInclude + webpackExclude 1`] = `
"
import(
  /* webpackChunkName: 'Bar'*/
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  /* webpackExclude: /(?!*test.js)$/ */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackExclude: /(?!*test.js)$/ */

  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackmode + webpackInclude 1`] = `
"
import(
  /* webpackChunkName: 'Bar'*/
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName + webpackmode 1`] = `
"
import(/* webpackChunkName: 'Bar'*//* webpackMode: 'Lazy' */'./Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackChunkName 1`] = `
"
import(/* webpackChunkName: 'Bar' */'./Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Bar' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`import with custom webpackPrefetch 1`] = `
"
import(
  /* webpackPrefetch: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackPrefetch: true */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackPreload 1`] = `
"
import(
  /* webpackPreload: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackPreload: true */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackmode + webpackInclude + webpackExclude + webpackIgnore 1`] = `
"
import(
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  /* webpackExclude: /(?!*test.js)$/ */
  /* webpackIgnore: true */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackIgnore: true */

  /* webpackExclude: /(?!*test.js)$/ */

  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackmode + webpackInclude + webpackExclude 1`] = `
"
import(
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  /* webpackExclude: /(?!*test.js)$/ */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackExclude: /(?!*test.js)$/ */

  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackmode + webpackInclude 1`] = `
"
import(
  /* webpackMode: 'Lazy' */
  /* webpackInclude: /*.js$/ */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackInclude: /*.js$/ */

  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with custom webpackmode 1`] = `
"
import(
  /* webpackMode: 'Lazy' */
  './Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackMode: 'Lazy' */

  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`import with disableWarnings: true 1`] = `
"
import('./Component')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Component\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Component' */
  './Component')]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, './Component'),
  resolve: () => require.resolveWeak('./Component'),
  chunkName: () => \\"Component\\"
});
"
`;

exports[`multiple imports 1`] = `
"
import('one')
import('two')
import('three')

      ↓ ↓ ↓ ↓ ↓ ↓

var _path4 = _interopRequireDefault(require(\\"path\\"));

var _universalImport4 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport4.default)({
  id: \\"one\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'one' */
  'one')]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, 'one'),
  resolve: () => require.resolveWeak('one'),
  chunkName: () => \\"one\\"
});
(0, _universalImport4.default)({
  id: \\"two\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'two' */
  'two')]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, 'two'),
  resolve: () => require.resolveWeak('two'),
  chunkName: () => \\"two\\"
});
(0, _universalImport4.default)({
  id: \\"three\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'three' */
  'three')]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, 'three'),
  resolve: () => require.resolveWeak('three'),
  chunkName: () => \\"three\\"
});
"
`;
